Fixed bug #78226